# quran-apps-directory

./: .dockerignore  .env.railway  .env.railway.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  DOCKERFILE_COMPARISON.md  DOCKERFILE_IMPLEMENTATION_SUMMARY.md  DOCKERFILE_SETUP.md  Dockerfile  Dockerfile.disabled  LICENSE  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_FILE_STRUCTURE.md  RAILWAY_VARIABLES.md  README.md  WORKFLOW.md  _routes.json  angular.json  compress-assets.js  configure-branch-deployments.sh  deploy-netlify.sh  dev-start.bat  dev-start.sh  frontend-userdata.sh  generate-prerender-routes.js  generate-sitemap.js  index.html.178#  index.html.181#  netlify-dev.toml  netlify-headers.txt  netlify-staging.toml  netlify.toml  nginx.conf  ngsw-config.json  nixpacks.toml  nixpacks.toml.frontend.backup  (+15 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .railwayrc  CATEGORY_SYNC_MIGRATION.md  DOCKER.md  Dockerfile  Procfile  RAILWAY_TROUBLESHOOT.md  README.md  applications_data_python.json  docker-compose.yml  generate_full_migration.py  generate_migration_simple.py  manage.py  nixpacks.toml  pyproject.toml  railway-entrypoint.sh  railway.json  railway_start.py  requirements.txt  run_server.py  start.sh
backend/.railway/: config.json
backend/apps/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py  widgets.py
backend/apps/api/: __init__.py  admin_controllers.py  analytics.py  controllers.py  schemas.py  search.py  sentry_tunnel.py  serializers.py  urls.py  views.py
backend/apps/management/: __init__.py
backend/apps/migrations/: 0001_initial.py  0002_load_apps_data.py  0002_populate_all_44_apps_with_screenshots.py  0002_populate_all_data.py  0002_populate_apps.py  0003_populate_apps_dynamic.py  0003_sync_app_categories_from_frontend.py  0004_remove_islamic_category.py  0004_setup_pgvector_extension.py  0005_change_embedding_dimensions_to_gemini.py  0006_add_crawled_content_cache.py  0007_appcrawleddata.py  0008_migrate_crawled_content.py  0009_resync_app_categories.py  0010_fix_truncated_descriptions.py  0011_add_surah_app.py  0012_fix_broken_developer_logos.py  0013_appviewevent.py  0014_alter_application_icon_to_imagefield.py  0015_migrate_icon_urls_to_paths.py  0016_convert_main_images_add_screenshots.py  0017_migrate_to_relative_paths.py  0018_make_application_icon_mandatory.py  0019_make_main_images_mandatory.py  0020_add_multi_filter_fields.py  0021_resync_app_categories_v2.py  0022_fix_zuolfa_images.py  0023_fix_zuolfa_screenshots_and_sort.py  0024_clear_broken_developer_logos.py  0025_populate_app_metadata.py
backend/apps/services/: __init__.py  app_service.py  app_service_simple.py  applications_data_parser.py  simple_data_parser.py
backend/apps/tests/: __init__.py  test_api.py  test_arabic_normalization.py  test_hybrid_search.py  test_image_processing.py  test_models.py  test_multi_filter.py  test_services.py
backend/apps/utils/: __init__.py  user_agent_parser.py
backend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_populate_categories.py  0002_remove_islamic_category.py  0003_update_category_sort_orders.py  (+3 more)
backend/config/: asgi.py  db.sqlite3  urls.py  wsgi.py
backend/core/: models.py  pagination.py  scalar_view.py
backend/developers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/metadata/: admin.py  apps.py  models.py  tests.py
backend/requirements/: base.txt  local.txt  production.txt  testing.txt
backend/submissions/: admin.py  apps.py  models.py
docs/: BACKLOG.md  (+33 more)
(+388 files in other folders)
